# 2D_FVM_CUDA

./: CMakeLists.txt  README.md  TestSimple.cu  test2D.cu
src/: basicFuns.cu  basicFuns.cuh  basicFuns.h  ghostCellPresets.cuh  wrappers.cuh  wrappers.h
